--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input
               type="text"
               id="username"
-              placeholder="Masalan: abbos_muallim"
+              placeholder=""
               required
             />
           </div>
